--- a/app/src/main/res/layout/fragment_income_rate.xml
+++ b/app/src/main/res/layout/fragment_income_rate.xml
@@ -54,6 +54,7 @@
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_3"
                 android:hint="@string/income_rate_holding_price"
+                android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
                 android:textColor="@color/white_2"
@@ -72,6 +73,7 @@
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_3"
                 android:hint="@string/income_rate_holding_count"
+                android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
                 android:textColor="@color/white_2"
@@ -89,6 +91,7 @@
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_2"
                 android:hint="@string/income_rate_purchase_amount"
+                android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
                 android:textColor="@color/white_2"
@@ -128,6 +131,7 @@
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_2"
                 android:hint="@string/income_rate_target_income_rate_percent"
+                android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
                 android:textColor="@color/white_2"
