string resource refactoring

--- a/app/src/main/res/layout/fragment_water.xml
+++ b/app/src/main/res/layout/fragment_water.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="105dp"
-                android:text="현재의 나는?"
+                android:text="@string/water_subtitle_current_state"
                 android:textAppearance="@style/TextBody1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_title" />
@@ -59,7 +59,7 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_3"
-                android:hint="보유 평단가"
+                android:hint="@string/water_holding_price"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
@@ -78,7 +78,7 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_3"
-                android:hint="보유 수량"
+                android:hint="@string/water_holding_count"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
@@ -96,7 +96,7 @@
                 android:layout_marginTop="18dp"
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_2"
-                android:hint="매입 금액"
+                android:hint="@string/water_purchase_amount"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
@@ -112,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="28dp"
-                android:text="물/불타기"
+                android:text="@string/water_subtitle_water_fire"
                 android:textAppearance="@style/TextBody1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/et_purchase_amount" />
@@ -126,7 +126,7 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_3"
-                android:hint="보유 평단가"
+                android:hint="@string/water_additional_price"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
@@ -145,7 +145,7 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_3"
-                android:hint="보유 수량"
+                android:hint="@string/water_additional_count"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
@@ -164,7 +164,7 @@
                 android:layout_marginBottom="40dp"
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_2"
-                android:hint="매입 금액"
+                android:hint="@string/water_purchase_amount"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
                 android:textAppearance="@style/TextCaption1"
