--- a/app/src/main/res/layout/fragment_income_rate.xml
+++ b/app/src/main/res/layout/fragment_income_rate.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="vm"
+            type="com.depromeet.muyaho.ui.calc.IncomeRateViewModel" />
+    </data>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -56,6 +63,7 @@
                 android:hint="@string/income_rate_holding_price"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
+                android:text="@={vm.holdingPrice}"
                 android:textAppearance="@style/TextCaption1"
                 android:textColor="@color/white_2"
                 android:textColorHint="@color/gray_40"
@@ -75,6 +83,7 @@
                 android:hint="@string/income_rate_holding_count"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
+                android:text="@={vm.holdingCount}"
                 android:textAppearance="@style/TextCaption1"
                 android:textColor="@color/white_2"
                 android:textColorHint="@color/gray_40"
@@ -90,9 +99,11 @@
                 android:layout_marginTop="18dp"
                 android:background="@drawable/shape_bg_radius_10dp"
                 android:backgroundTint="@color/black_2"
+                android:gravity="center_vertical"
                 android:hint="@string/income_rate_purchase_amount"
                 android:inputType="numberDecimal"
                 android:paddingHorizontal="12dp"
+                android:text="@{vm.purchaseAmount}"
                 android:textAppearance="@style/TextCaption1"
                 android:textColor="@color/white_2"
                 android:textColorHint="@color/gray_40"
