--- a/app/src/main/res/layout/fragment_income_rate.xml
+++ b/app/src/main/res/layout/fragment_income_rate.xml
@@ -10,161 +10,170 @@
             type="com.depromeet.muyaho.ui.calc.IncomeRateViewModel" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:background="@color/black_1">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="37dp"
+            android:text="@string/income_rate_title"
+            android:textAppearance="@style/TextSubtitle1"
+            android:textColor="@color/white_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/img_income_rate_illustration"
+            android:elevation="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:background="@color/black_1">
+            android:layout_height="0dp"
+            android:layout_marginTop="66dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="37dp"
-                android:text="@string/income_rate_title"
-                android:textAppearance="@style/TextSubtitle1"
-                android:textColor="@color/white_1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/img_income_rate_illustration"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_subtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="100dp"
-                android:text="@string/income_rate_current_holding"
-                android:textAppearance="@style/TextBody1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_title" />
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_holding_price"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/shape_bg_radius_10dp"
-                android:backgroundTint="@color/black_3"
-                android:hint="@string/income_rate_holding_price"
-                android:inputType="numberDecimal"
-                android:paddingHorizontal="12dp"
-                android:text="@={vm.holdingPrice}"
-                android:textAppearance="@style/TextCaption1"
-                android:textColor="@color/white_2"
-                android:textColorHint="@color/gray_40"
-                app:layout_constraintEnd_toStartOf="@id/et_holding_count"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_holding_count"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/shape_bg_radius_10dp"
-                android:backgroundTint="@color/black_3"
-                android:hint="@string/income_rate_holding_count"
-                android:inputType="numberDecimal"
-                android:paddingHorizontal="12dp"
-                android:text="@={vm.holdingCount}"
-                android:textAppearance="@style/TextCaption1"
-                android:textColor="@color/white_2"
-                android:textColorHint="@color/gray_40"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/et_holding_price"
-                app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_purchase_amount"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="18dp"
-                android:background="@drawable/shape_bg_radius_10dp"
-                android:backgroundTint="@color/black_2"
-                android:gravity="center_vertical"
-                android:hint="@string/income_rate_purchase_amount"
-                android:inputType="numberDecimal"
-                android:paddingHorizontal="12dp"
-                android:text="@{vm.purchaseAmount}"
-                android:textAppearance="@style/TextCaption1"
-                android:textColor="@color/white_2"
-                android:textColorHint="@color/gray_40"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_holding_count" />
-
-            <TextView
-                android:id="@+id/tv_target_income_rate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="34dp"
-                android:text="@string/income_rate_target_income_rate"
-                android:textAppearance="@style/TextBody1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_purchase_amount" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:text="@string/income_rate_desc"
-                android:textAppearance="@style/TextCaption1"
-                android:textColor="@color/secondary_red"
-                app:layout_constraintBottom_toBottomOf="@id/tv_target_income_rate"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tv_target_income_rate" />
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_target_income_rate"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="18dp"
-                android:background="@drawable/shape_bg_radius_10dp"
-                android:backgroundTint="@color/black_2"
-                android:hint="@string/income_rate_target_income_rate_percent"
-                android:inputType="numberDecimal"
-                android:paddingHorizontal="12dp"
-                android:textAppearance="@style/TextCaption1"
-                android:textColor="@color/white_2"
-                android:textColorHint="@color/gray_40"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_target_income_rate" />
-
-            <TextView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp"
-                android:background="@drawable/shape_bg_radius_8dp"
-                android:backgroundTint="#2d247d"
-                android:gravity="center"
-                android:text="@string/income_rate_share"
-                android:textAppearance="@style/TextBody2.Bold"
-                android:textColor="@color/gray_20"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_target_income_rate" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/tv_subtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="34dp"
+                    android:text="@string/income_rate_current_holding"
+                    android:textAppearance="@style/TextBody1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_holding_price"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/shape_bg_radius_10dp"
+                    android:backgroundTint="@color/black_3"
+                    android:hint="@string/income_rate_holding_price"
+                    android:inputType="numberDecimal"
+                    android:paddingHorizontal="12dp"
+                    android:text="@={vm.holdingPrice}"
+                    android:textAppearance="@style/TextCaption1"
+                    android:textColor="@color/white_2"
+                    android:textColorHint="@color/gray_40"
+                    app:layout_constraintEnd_toStartOf="@id/et_holding_count"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_holding_count"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="18dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/shape_bg_radius_10dp"
+                    android:backgroundTint="@color/black_3"
+                    android:hint="@string/income_rate_holding_count"
+                    android:inputType="numberDecimal"
+                    android:paddingHorizontal="12dp"
+                    android:text="@={vm.holdingCount}"
+                    android:textAppearance="@style/TextCaption1"
+                    android:textColor="@color/white_2"
+                    android:textColorHint="@color/gray_40"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/et_holding_price"
+                    app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_purchase_amount"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="18dp"
+                    android:background="@drawable/shape_bg_radius_10dp"
+                    android:backgroundTint="@color/black_2"
+                    android:gravity="center_vertical"
+                    android:hint="@string/income_rate_purchase_amount"
+                    android:inputType="numberDecimal"
+                    android:paddingHorizontal="12dp"
+                    android:text="@{vm.purchaseAmount}"
+                    android:textAppearance="@style/TextCaption1"
+                    android:textColor="@color/white_2"
+                    android:textColorHint="@color/gray_40"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/et_holding_count" />
+
+                <TextView
+                    android:id="@+id/tv_target_income_rate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="34dp"
+                    android:text="@string/income_rate_target_income_rate"
+                    android:textAppearance="@style/TextBody1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/et_purchase_amount" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:text="@string/income_rate_desc"
+                    android:textAppearance="@style/TextCaption1"
+                    android:textColor="@color/secondary_red"
+                    app:layout_constraintBottom_toBottomOf="@id/tv_target_income_rate"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/tv_target_income_rate" />
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_target_income_rate"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="18dp"
+                    android:background="@drawable/shape_bg_radius_10dp"
+                    android:backgroundTint="@color/black_2"
+                    android:hint="@string/income_rate_target_income_rate_percent"
+                    android:inputType="numberDecimal"
+                    android:paddingHorizontal="12dp"
+                    android:textAppearance="@style/TextCaption1"
+                    android:textColor="@color/white_2"
+                    android:textColorHint="@color/gray_40"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_target_income_rate" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginBottom="40dp"
+                    android:background="@drawable/shape_bg_radius_8dp"
+                    android:backgroundTint="#2d247d"
+                    android:gravity="center"
+                    android:text="@string/income_rate_share"
+                    android:textAppearance="@style/TextBody2.Bold"
+                    android:textColor="@color/gray_20"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/et_target_income_rate" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
