--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,7 @@
             app:itemIconTint="@color/white"
             app:labelVisibilityMode="unlabeled"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/menu_bottom_navigation"
-            android:background="@color/black_1"/>
+            app:menu="@menu/menu_bottom_navigation" />
 
         <com.depromeet.muyaho.widget.HomeFABView
             android:id="@+id/view_fab"
