--- a/app/src/main/res/layout/fragment_income_rate.xml
+++ b/app/src/main/res/layout/fragment_income_rate.xml
@@ -219,6 +219,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_target_income_rate" />
 
                 <TextView
+                    android:id="@+id/tv_share"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginHorizontal="20dp"
